# MemoryX

./: .gitignore  AGENTS.md  AGENT_PROGRESS_LOG.md  CLA.md  COMMERCIAL_LICENSE.md  CONCEPT_EXTENSION_IMPLEMENTATION_PLAN.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  ORCHESTRATION_PLAN.md  ORCHESTRATOR_CONTEXT_COMPACT.md  README.md  SECURITY.md  SKF_README_CONFORMANCE_AUDIT_2026-07-02.md
.cargo/: config.toml
.codex/hooks/: memoryx-compact-hook.md  refresh_orchestrator_context.ps1
.github/: pull_request_template.md
.github/workflows/: ci.yml
benchmarks/: rag_comparison_cases.json  run_rag_comparison.ps1
docs/: ANSWER_PACK.md  AUTHORING_API.md  BENCHMARK_EFFECTIVENESS_PLAN.md  BENCHMARK_RAG_COMPARISON.md  LLM_BOUNDARY.md  MEMORYX_VS_RAG.md  PORTABLE_CPU_BUILDS.md  QUERY_CONTRACT.md
examples/: basic.rs  mcp_server.rs  mcp_server_full.rs  native_api.rs  rag_python.py
src/: lib.rs  prelude.rs
src/cas/: canonical.rs  claims.rs  edges.rs  evidence.rs  integrity.rs  invariants.rs  io.rs  meta.rs  mod.rs  refs.rs  symbols.rs
src/crdt/: mod.rs  snapshot.rs  wal.rs
src/federation/: mod.rs
src/graph/: mod.rs  store.rs
src/index/: mod.rs
src/ingest/: mod.rs
src/query/: compiler.rs  constraints.rs  contract.rs  cost.rs  gap_generator.rs  intent.rs  llm_boundary.rs  mod.rs  planner.rs  retrieval.rs  router.rs  set_cover.rs  solver.rs
src/query/ann/: backend.rs  embedding.rs  hnsw.rs  index.rs  mod.rs
src/store/: api.rs  base_lease.rs  mod.rs
src/utils/: cpu.rs  io.rs  mod.rs
src/vm/: abi.rs  abi_part1.rs  interpreter.rs  mod.rs
tests/: answer_pack.rs  conflict_branching.rs  mcp_parallel_processes.rs  provenance_paths.rs  query_contract.rs
