[package]
name = "memoryx"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "memoryx"
path = "src/bin/memoryx.rs"

[dependencies]
blake3 = "1.5"
memmap2 = "0.9"
bitflags = "2.6"
crossbeam = "0.8"
parking_lot = "0.12"
rayon = "1.10"
thiserror = "2.0"
unicode-normalization = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
libc = "0.2"

# CLI dependencies
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
colored = "2.1"
indicatif = "0.17"
serde_yaml = "0.9"
toml = "0.8"
hex = "0.4"
base64 = "0.22"
csv = "1.3"
dirs = "5.0"
walkdir = "2.5"

# Federation dependencies
reqwest = { version = "0.12", features = ["json"], optional = true }
axum = { version = "0.7", features = ["json"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }

# MCP Server dependencies (optional)
tokio = { version = "1", features = ["full"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
sha2 = { version = "0.10", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_Security",
]}

[dev-dependencies]
tempfile = "3.10"

# MCP Server example (original - 10 tools)
[[example]]
name = "mcp_server"
path = "examples/mcp_server.rs"
required-features = ["mcp"]

# MCP Server Full example (14 tools - complete coverage)
[[example]]
name = "mcp_server_full"
path = "examples/mcp_server_full.rs"
required-features = ["mcp"]

# Native API example
[[example]]
name = "native_api"
path = "examples/native_api.rs"
required-features = ["mcp"]

[features]
default = ["federation"]
unsafe-optimizations = []
mcp = ["dep:tokio", "dep:sha2"]
cli = ["mcp", "federation"]
federation = ["dep:tokio", "dep:reqwest", "dep:axum", "dep:tower", "dep:tower-http"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"

# Оптимизации для разных архитектур
[profile.release.build-override]
opt-level = 3

[profile.production]
inherits = "release"
# Дополнительные оптимизации для production-сборки
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"

# Профиль с оптимизациями под конкретный CPU
[profile.optimized]
inherits = "release"
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"

# Профиль для максимальной производительности  
[profile.aggressive]
inherits = "release"
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
